# daydream2

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env  README.md  alembic.ini  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 68b15f3612bb_add_concept_and_dream_tables.py
backend/app/: database.py  main.py
backend/app/controllers/: dream_controller.py  health_controller.py
backend/app/models/: __init__.py  concept_model.py  dream_model.py  example.py
backend/app/schemas/: __init__.py  concept_schema.py  dream_schema.py
backend/app/services/: concept_service.py  dream_service.py  health_service.py
client/: .env.production  README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/: ConceptCard.tsx  FindDreamsDropdown.tsx  Navigation.tsx
client/src/components/views/: AboutView.tsx  DreamView.tsx  HomeView.tsx  NewDreamView.tsx
client/src/lib/: api.ts
client/src/types/: concept.ts
